# libisf

./: .gitignore  CMakeLists.txt  README.md
editor/: audio_reader.hpp  camera_reader.hpp  code_editor.hpp  control_factory.hpp  image_surface.hpp  main.cpp  material.hpp  resources.qrc  shader.hpp  shader_item.hpp  shader_node.hpp  video_reader.hpp  window.hpp
examples/: Editor.qml  Editor.qmlc  editor.cpp  editor.hpp
src/: isf.cpp  isf.hpp
